--- a/Android/GolgiBird/GolgiBird/src/main/res/layout/fragment_playfield.xml
+++ b/Android/GolgiBird/GolgiBird/src/main/res/layout/fragment_playfield.xml
@@ -133,4 +133,13 @@
         android:textColor="#ffffff"
         android:layout_centerHorizontal="true" />
 
+    <ImageView
+        android:layout_width="150dp"
+        android:layout_height="150dp"
+        android:id="@+id/forkMeImageView"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="false"
+        android:src="@drawable/fork_me" />
+
 </RelativeLayout>
