--- a/iOS/GolgiBird/GolgiBird/Base.lproj/Main_iPhone.storyboard
+++ b/iOS/GolgiBird/GolgiBird/Base.lproj/Main_iPhone.storyboard
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="4514" systemVersion="13B42" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" initialViewController="vXZ-lx-hvc">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="5053" systemVersion="13C64" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" initialViewController="vXZ-lx-hvc">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="3747"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="3733"/>
     </dependencies>
     <scenes>
         <!--View Controller-->
@@ -42,6 +42,15 @@
                                     <action selector="touchDown:" destination="vXZ-lx-hvc" eventType="touchDown" id="pf5-Em-5XJ"/>
                                 </connections>
                             </button>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="fork_me.png" translatesAutoresizingMaskIntoConstraints="NO" id="LEO-tN-IjF">
+                                <rect key="frame" x="0.0" y="0.0" width="150" height="150"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            </imageView>
+                            <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="aW2-GF-ZPM">
+                                <rect key="frame" x="0.0" y="0.0" width="150" height="150"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                            </view>
                             <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Hfm-EV-Mub">
                                 <rect key="frame" x="77" y="104" width="166" height="44"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
@@ -112,6 +121,8 @@
                     <connections>
                         <outlet property="bgImageView" destination="Crd-Md-Qfn" id="cdD-5L-p8O"/>
                         <outlet property="collisionView" destination="v01-cm-dL2" id="kf6-p3-q7y"/>
+                        <outlet property="forkMeImageView" destination="LEO-tN-IjF" id="jTN-Dq-xFB"/>
+                        <outlet property="forkMeTouchView" destination="aW2-GF-ZPM" id="3n0-g5-zT2"/>
                         <outlet property="gameOverLabel" destination="1Ql-9W-yue" id="Z07-TI-c8c"/>
                         <outlet property="hiScoreLabel" destination="h8f-hf-FC8" id="7AQ-B1-cP2"/>
                         <outlet property="nameLabel" destination="wia-RR-zUP" id="yTd-pn-nEf"/>
@@ -128,6 +139,7 @@
         </scene>
     </scenes>
     <resources>
+        <image name="fork_me.png" width="320" height="320"/>
         <image name="grey-swatch.png" width="64" height="64"/>
         <image name="skyline.png" width="1080" height="1920"/>
     </resources>
